# egui_tabbed_document

./: .gitignore  Cargo.toml  README.md
src/: app.rs  interface.rs  language_labels.rs  main.rs
